resources/css/portfolio.css
html body {
  max-width: 2400px;
  background-image: url(../images/Sky.jpeg);
  min-height: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  align-content: center;
}
* {font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
/* GRID SETUP*/
.gridbody {
  border: 30px solid transparent;
  border-color: black;
  background-color: rgba(94, 115, 101, 0.4); 
  border-radius: 30px;
  margin-top: 75px;
  margin-bottom: 15px;
  margin-left: auto;
  margin-right: auto;
  height: auto;
  width: 45%;
  -moz-box-shadow: 0 0 15px black;
  -webkit-box-shadow: 0 0 15px black;
  box-shadow: 0 0 15px black;
  z-index: 3;
}
/* HEADING BAR */
.gridbody .heading {
  font-size: 2vw;
  text-align: center;
  background-color:transparent;
  margin-left: auto;
  margin-right: auto;
  padding-top: 3px;
  padding-bottom: 3px;
  width: 100%;
  z-index: 5;
 }
 
 .gridbody .navigation {
  background-color:transparent;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  z-index: 5;
 }

 .gridbody .nav {
  display: flex;
  font-size: 1.2rem;
  justify-content: space-around;
  align-content: center;
  z-index: 10;
 }
 .gridbody .nav a{
  color: rgb(0, 14, 139);
 }
 .gridbody .nav a:hover {
  color: #57d857;
}
.gridbody .port {
  background-color:transparent;
}
.gridbody .port p {
  font-size: 1.1rem;
  line-height: 1.3rem;
  letter-spacing:0.1rem;
  font-weight: 700;
  color:whitesmoke ;
  margin-right: auto;
  margin-left: auto;
  width: 97%;
}
.gridbody .port em {
  color: rgb(243, 240, 30);
}
/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides1{
  display: none;
  z-index: 1;
}


.gridbody footer a {
  margin-left: auto;
  margin-right: auto;
  color: black;
}
@media(max-width: 1860px) {
  .gridbody {
    width: 60%;
  }
}
@media(max-width: 1350px) {
  .gridbody {
    width: 70%;
  }
}
@media(max-width: 1200px) {
  .gridbody {
    width: 90%;
  }
  .gridbody .heading {
    font-size: 1.7rem;
  }
  .gridbody .nav {
    font-size: 1.5rem;
  }
  .gridbody .port p {
    font-size: 1.5rem;
    line-height: 1.5rem;
  }
}

.gridbody .mainbody .c{
  background-color: transparent;
  margin-left: auto;
  margin-right: auto;
  padding-left: 1%;
  padding-right: 1%;
}


.gridbody .ph2 {
  text-align: center;
  font-size: 2rem;
  font-weight: 800;
  color: rgb(243, 240, 30);
}
.gridbody .mainbody .p{
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  line-height: 1.2rem;
  word-spacing: 1;
  font-weight: bold;
  color:whitesmoke ;
  margin-right: 4%;
}


/* Hide the images by default */
.mySlides1 {
  display: none;
  padding-left: 5%;
  z-index: 1;
}

.mainbody .mySlides2 {
  display: none;
  padding-left: 5%;
  z-index: 1;
}


/* Caption text */
.text {
  text-align: center;
  color: rgb(0, 14, 139);
  font-weight: 700;
  font-size: 2vw;
  letter-spacing: 0.1rem;
  bottom: 8px;
  width: 100%;
}

/* Fading animation */
.fade {
  /*animation-name: fade;*/
  /*animation-duration: 2.5s;*/
  animation: fade 6s linear forwards;
  opacity: 0;
}

@keyframes fade {
  0% {opacity: 0; }
  25% {opacity: 1; }
  50% {opacity: 1; }
  75% {opacity: 1; }
  100% {opacity: 0 ;}

  /*from {opacity: .5} 
  to {opacity: 1}*/
}

/*EMPLOYMENT HISTORY*/
.position {
  text-align: left;
  font-size: 1.4rem;
  font-weight: 800;
  color:rgb(62, 211, 107);
  padding-left: 2%;
}
.ph4, .aboutme {
  text-align: left;
  font-size: 2rem;
  font-weight: 800;
  color:rgb(62, 211, 107);
  padding-left: 2%;
  width: 95%;
}
.responsibilities, .summary{
  font-family:Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  line-height: 1.5rem;
  word-spacing: 1;
  letter-spacing: 0.07rem;
  font-weight: bold;
  color:whitesmoke ;
  margin-right: 4%;
}
.E1, .E2, .E3, .E4, .E5, .E6, .E7 {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  background-color: rgba(4, 4, 4, 0.2);
  padding-top: 2%;
  padding-bottom: 3%;
  box-shadow: 15px 15px 10px rgb(17, 16, 16);
}
.about {
  font-family:Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  line-height: 1.5rem;
  word-spacing: 1;
  letter-spacing: 0.07rem;
  font-weight: bold;
  color:whitesmoke ;
  margin-right: 4%;
}

.name {
  color:#f0edce ;
}

